# public/swagger.json
@@ -114,6 +114,27 @@
 					}
 				]
 			}
+		},
+		"/api/users": {
+			"get": {
+				"operationId": "GetUsers",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Endpoint to retreive the users in the collections \"Users\" od BD",
+				"tags": [
+					"UserController"
+				],
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
