# src/routes/index.ts
@@ -7,6 +7,7 @@ import express, { Request, Response } from 'express';
 import helloRouter from './HelloRouter';
 import { LogInfo } from '../utils/logger';
 import goodbyeRouter from './GoodbyeRouter';
+import usersRouter from './UserRouter';
 
 //instancia del server
 let server = express();
@@ -24,5 +25,6 @@ rootRouter.get('/', (req:Request, res: Response) => {
 server.use('/', rootRouter); //http://localhost:8000/api/
 server.use('/hello', helloRouter); //http://localhost:8000/api/hello
 server.use('/goodbye', goodbyeRouter);//http://localhost:8000/api/goodbye
+server.use('/users', usersRouter);//http://localhost:8000/api/users
 
 export default server;
